docs: 更新进度日志 + 提交架构审查报告和 P0-1~P0-8 架构方案
- 新增 architecture-p0-1-to-8.md（P0-1~P0-8 架构设计方案）
- 新增 sprint1-coverage-report.md（QA 需求覆盖审查报告）
- 更新 progress.md（记录 2026-04-11 工作进度）